# backend_mvp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.pip  README.md  create_dummy_florence_chats.py  create_dummy_monthly_data.py  gpt_convo.py  json_viewer.py  main.py  pyproject.toml  pyvenv.cfg  requirements.txt  tts_main.py  user_florence_logs.txt  view_database.py
app/: .env  achievements.py  admin.py  analytics.py  api.py  assessment_prompt_canto.txt  assessment_prompt_eng.txt  calendar.py  doctor.py  florence.py  florence_ai.py  florence_assessment.py  florence_triage.py  florence_utils.py  infermedica_api.py  login.py  otp_routes.py  otp_system.py  prompt.txt  prompt_canto.txt  prompt_eng.txt  questionnaire_definitions.py  questionnaire_enrichment.py  questionnaire_models.py  questionnaire_triage_bridge.py  questions.json  questions.py  session_manager.py  symptom_questionnaire.py  triage_api.py  triage_prompt_canto.txt  triage_prompt_eng.txt  triage_routes.py  triage_routes_simple.py  triage_simple.py  twilio_verify.py  view_patient_florence.py
scripts/: cleanup_users.py  create_dummy_florence_chats.py  create_dummy_monthly_data.py  create_test_user.py  json_history_viewer.py  populate_triage_data.py  view_database.py
telenurse/: api_keys.txt  app.js  gpt_convo.py  gpt_json.py  install_mac_linux.sh  install_windows.bat  json_viewer.py  oldtest_interface.py  readme  start_telenurse.sh  system_prompt.txt  test_interface.py  tts_config.py  tts_main.py
telenurse/interface/: index.html  styles.css
tests/: conftest.py  factories.py  mock_openai.py
(+14 files in other folders)
