[project]
name = "ovis-backend-mvp"
version = "0.1.0"
description = ""
authors = [
    {name = "Evan Ning",email = "evanning0206@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "pymongo[srv] (>=4.13.0,<5.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
